@@ -145,6 +145,7 @@ public class BigTableReader extends SSTableReader
             {
                 listener.onSSTableSkipped(this, SkippingReason.BLOOM_FILTER);
                 Tracing.trace("Bloom filter allows skipping sstable {}", descriptor.generation);
+                bloomFilterTracker.addTrueNegative();
                 return null;
             }
         }
